<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/large_margin"
     android:background="@drawable/background"
     android:orientation="horizontal"
     >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/person"
    android:layout_margin="@dimen/midum_margin"

  />
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
   android:layout_weight="1"
    android:layout_marginEnd="@dimen/normal_margin"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/midum_margin"
            android:fontFamily="@font/dm_sans_bold"
            android:gravity="center"
            android:text="@string/user_name"
            android:textAppearance="@style/winter_in_p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:layout_marginTop="@dimen/normal_margin"
            android:textAppearance="@style/day"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destnation"
            android:drawableStart="@drawable/location"
            android:drawablePadding="@dimen/small_margin"
            android:textAppearance="@style/destnation"
            android:layout_marginTop="@dimen/normal_margin"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/normal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:gravity="center"
                android:textAppearance="@style/reviews"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/normal_margin"
                android:gravity="center"
                android:text="@string/rating"
                android:textAppearance="@style/reviews"

                />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/star"
                android:layout_marginStart="@dimen/small_margin"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="38dp"
            android:layout_height="21dp"
            android:layout_marginTop="@dimen/midum_margin"
            android:textAppearance="@style/time"
            android:text="@string/time"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:layout_gravity="end"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:layout_marginTop="@dimen/normal_margin"
            android:textAppearance="@style/day"
            android:gravity="center"
            android:layout_gravity="end"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textAppearance="@style/duraiton"
            android:gravity="center"
            android:layout_marginTop="@dimen/normal_margin"
            android:lines="1"
            android:layout_gravity="end"

            />
    </LinearLayout>
</LinearLayout>


 </LinearLayout>
